# modern-python-pj-template

./: .editorconfig  .gitignore  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
mysite/: settings.py
