[project]
name = "modern-python-pj-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
    "types-requests>=2.32.0.20250328",
]

[tool.ruff]
lint.select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "ANN",
    # flake8-type-checking
    "TC",
    # flake8-unused-arguments
    "ARG",
]

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
pretty = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
